--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
     "@babel/preset-env": "^7.4.3",
+    "check-word": "^1.1.0",
     "nodemon": "^1.18.10"
   },
   "dependencies": {
